# roomie

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  eid.rs  handlers.rs  main.rs  model.rs
web-app/: package-lock.json  package.json
web-app/public/: global.css  index.html
web-app/src/: App.svelte  DataForm.svelte  Login.svelte  MoreInfoModal.svelte  ProfileImageSelector.svelte  SearchBar.svelte  SignOut.svelte  TableView.svelte
