[package]
name = "roomie"
version = "0.1.0"
authors = ["Arpan Dhatt <ary.dhatt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features=["rustls"] }
actix-rt = "1"
futures = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-files = "0.5.0"
jwt = "0.13.0"
hmac = "0.10"
sha2 = "0.9"
dotenv = "0.15.0"
mongodb = "1"
bson = "1.2.0"
regex = "1"
meilisearch-sdk = "0.7.0"
lazy_static = "1.4.0"
env_logger = "*"
